meja/tests/if-then-else-error.stderr
File "tests/if-then-else-error.meja", line 5, characters 4-6:
Error: Incompatable types _ and int:
       Cannot unify bool and int
